--- a/includes/.env
+++ b/includes/.env
@@ -3,9 +3,9 @@ DB_USER=root
 DB_PASS=LMip092132493@
 DB_NAME=devwebcamp
 
-EMAIL_HOST=
-EMAIL_PORT=
-EMAIL_USER=
-EMAIL_PASS=
+EMAIL_HOST= sandbox.smtp.mailtrap.io
+EMAIL_PORT= 2525
+EMAIL_USER= d5f8c9cb561b01
+EMAIL_PASS= afd0e4571e71bd
 
 HOST=http://localhost:3000
