--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "gulp-webp": "^4.0.1",
     "sass": "^1.41.1",
     "terser": "^5.14.2"
+  },
+  "dependencies": {
+    "sweetalert": "^2.1.2"
   }
 }
