--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "dependencies": {
     "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.7.12",
     "swiper": "^9.3.2",
     "webpack-stream": "^7.0.0"
   }
